# PineconeFileManager

./: Zak-Readme.md  app.py  models.py  pyproject.toml  replit.nix  replit_zip_error_log.txt  requirements.txt  utils.py
.cache/nix/: binary-cache-v6.sqlite
.cache/replit/env/: latest  latest.json
.cache/replit/nix/: env.json
.local/state/replit/agent/: repl_state.json
.upm/: store.json
attached_assets/: Pasted-INFO-werkzeug-172-31-196-38-02-Jan-2025-00-48-34-GET-static-js-upload-js-HTTP-1-1-304-INF-1735779430378.txt
bruno/dynamic-context/: Local.bru  Local—test-index.bru  Production—Replit.bru  bruno.json
instance/: files.db
static/css/: style.css
static/js/: file-manager.js  indexes.js  upload.js
templates/: base.html  index.html  indexes.html  logs.html
