[project]
name = "repl-nix-pineconefilemanager"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "pinecone-client>=4.1.2",
    "pinecone>=5.4.2",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.36",
    "werkzeug>=3.1.3",
    "pillow>=11.0.0",
    "pdf2image>=1.17.0",
]
